//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package go_protos;

option go_package = "./go_protos";

message FileChunk {
  uint64          ClassID                      =1;  //文件传输单元ID
  bytes           SupplierID                   =2;  //提供者ID
  bytes           PullID                       =3;  //文件下载者ID
  uint64          OffsetIndex                  =4;  //块起始位置偏移量
  uint64          ChunkSize                    =5;  //块大小
  bytes           Data                         =6;  //文件块数据
}

